--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -1,25 +1,33 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h5>Nama: </h5>
-<b>{{nama}}</b>
 
-<table>
+<ul class="nav">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">{{nama}}</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'wishlist:logout' %}">Logout</a>
+    </li>
+</ul>
+
+<table class="table table-bordered">
     <tr>
-    <th>Nama Barang</th>
-    <th>Harga Barang</th>
-    <th>Deskripsi</th>
+    <th scope="col">Nama Barang</th>
+    <th scope="col">Harga Barang</th>
+    <th scope="col"></th>Deskripsi</th>
     </tr>
     {% comment %} Tambahkan data di bawah baris ini {% endcomment %}
     {% for barang in list_barang %}
-        <tr>
-            <th>{{barang.nama_barang}}</th>
-            <th>{{barang.harga_barang}}</th>
-            <th>{{barang.deskripsi}}</th>
-        </tr> 
-    {% endfor %}
+    <tr>
+        <th>{{barang.nama_barang}}</th>
+        <th>{{barang.harga_barang}}</th>
+        <th>{{barang.deskripsi}}</th>
+    </tr>
+{% endfor %}
 </table>
-<h5>Sesi terakhir login: {{ last_login }}</h5>
-<button><a href="{% url 'wishlist:logout' %}">Logout</a></button>
+
+<h5>Sesi terakhir login: {{last_login}}</h5>
+{% comment %}<button type="button" class="btn btn-danger"><a href="{% url 'wishlist:logout' %}">Logout</a></button>{% endcomment %}
 
 {% endblock content %}
