Membuat versi dark mode

--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -11,7 +11,7 @@
     </li>
 </ul>
 
-<table class="table table-bordered">
+<table class="table table-dark">
     <tr>
     <th scope="col">Nama Barang</th>
     <th scope="col">Harga Barang</th>
